--- a/src/css/customize/customize.scss
+++ b/src/css/customize/customize.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-items: center;
   align-items: center;
+  overflow: hidden;
 
   .nav__item {
     position: absolute;
